# python_api

./: .coverage  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  req.txt
.github/actions/setup/: action.yml
.github/workflows/: code-quality.yml
src/blazing/: db.py  main.py
src/blazing/logging/: logging_config.py  middleware.py
src/blazing/models/: pokemon.py
src/blazing/routes/: pokemon.py
tests/: conftest.py  test_init.py
tests/integration/: test_pokemon_endpoints.py
tests/unit/: test_pokemon_model.py
