[project]
name = "blazing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "husamhamu", email = "husssamhamo123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi[standard,standart]>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "python-json-logger>=4.0.0",
    "sqlmodel>=0.0.31",
]

[project.scripts]
blazing = "blazing:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "faker>=40.1.2",
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
